# haskell-marconiclient

./: .ghci  README.md  marconi.cabal
src/: Main.hs  Marconi.hs
src/Marconi/Common/: Http.hs  Json.hs
src/Marconi/V1/Http/: Queue.hs
tests/: Json.hs  TestSuite.hs
